@@ -1,3 +1,8 @@
+2005-02-08  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* storage/main.c (main) : Bind to GETTEXT_PACKAGE instead of PACKAGE.
+	Probable fix for #71469
+
 2005-02-07  Sushma Rai  <rsushma@novell.com>
 
 	* addressbook/e-book-backend-gal.c (func_contains): Handling the
